ecmascript/parser/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts.stderr
error: 'implements', 'interface', 'let', 'package', 'private', 'protected',  'public', 'static', or 'yield' cannot be used as an identifier in strict mode
 --> $DIR/tests/typescript-errors/class/parameter-properties-binding-patterns/input.ts:2:17
  |
2 |     constructor(public []) {}
  |                 ^^^^^^

